--- a/package.json
+++ b/package.json
@@ -19,17 +19,23 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.18",
+    "lodash": "^4.17.21",
     "next": "13.4.7",
+    "popmotion": "^11.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-helmet": "^6.1.0",
     "react-outside-click-handler": "^1.3.0",
     "sass": "^1.63.6",
     "sharp": "^0.32.1",
-    "trender-client": "^4.0.0",
+    "trender-client": "^4.1.1",
     "twemoji": "^14.0.2",
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.195",
+    "@types/react-helmet": "^6.1.6",
+    "@types/react-outside-click-handler": "^1.3.1",
     "next-sitemap": "^4.1.8"
   }
 }
