--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trender",
-  "version": "0.1.0",
+  "version": "4.1.2",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -14,6 +14,7 @@
     "@hcaptcha/react-hcaptcha": "^1.8.1",
     "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.14.0",
+    "@types/google-map-react": "^2.1.7",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -23,6 +24,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.18",
+    "google-map-react": "^2.2.1",
     "lodash": "^4.17.21",
     "next": "13.4.7",
     "popmotion": "^11.0.5",
@@ -30,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-helmet": "^6.1.0",
     "react-outside-click-handler": "^1.3.0",
+    "react-simple-maps": "^3.0.0",
     "sass": "^1.63.6",
     "sharp": "^0.32.1",
     "trender-client": "^4.1.1",
@@ -40,6 +43,7 @@
     "@types/lodash": "^4.14.195",
     "@types/react-helmet": "^6.1.6",
     "@types/react-outside-click-handler": "^1.3.1",
+    "@types/react-simple-maps": "^3.0.0",
     "next-sitemap": "^4.1.8"
   }
 }
