--- a/package.json
+++ b/package.json
@@ -6,24 +6,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "update": "yarn upgrade-interactive --latest"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hcaptcha/react-hcaptcha": "^1.8.1",
-    "@mui/icons-material": "^5.14.0",
-    "@mui/material": "^5.14.0",
-    "@types/google-map-react": "^2.1.7",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.17",
+    "@types/google-map-react": "^2.1.10",
     "@types/node": "20.3.3",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "axios": "^1.4.0",
-    "dayjs": "^1.11.9",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
+    "axios": "^1.6.1",
+    "dayjs": "^1.11.10",
     "detect-browser": "^5.3.0",
-    "eslint": "8.44.0",
+    "eslint": "8.53.0",
     "eslint-config-next": "13.4.7",
-    "framer-motion": "^10.12.18",
+    "framer-motion": "^10.16.4",
     "google-map-react": "^2.2.1",
     "lodash": "^4.17.21",
     "next": "13.4.7",
@@ -33,11 +34,11 @@
     "react-helmet": "^6.1.0",
     "react-outside-click-handler": "^1.3.0",
     "react-simple-maps": "^3.0.0",
-    "sass": "^1.63.6",
-    "sharp": "^0.32.1",
-    "trender-client": "^4.1.1",
+    "sass": "^1.69.5",
+    "sharp": "^0.32.6",
+    "trender-client": "^5.4.6",
     "twemoji": "^14.0.2",
-    "typescript": "5.1.6"
+    "typescript": "5.2.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.195",
